SERVER-29618 fix serialization of geo match expressions

Explicitly blacklist lookup_absorb_match from aggregation_sharded_collections_passthrough.

(cherry picked from commit 18bc61d22123da5897d275eb92576522a1bab4de)